Closed Bug 1764113 Opened 2 years ago Closed 2 years ago

Many `invalid_value` errors noticed in Fenix for metrics `power.total_thread_wakeups` and `power.wakeups_per_process_type` starting March 30 or so

Categories

(Toolkit :: Performance Monitoring, defect)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- fixed
firefox101 --- fixed

People

(Reporter: chutten, Assigned: florian)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

In the Monday Glean SDK Weekly Monitoring meeting we noticed a rising number of invalid_value errors for the metrics power.total_thread_wakeups and power.wakeups_per_process_type.

Having a look at the code it can record 0 which is not a happy value for a Glean counter metric (at least not yet, see bug 1762859). This is somewhat different from how the cpu time metrics do things.

Probably just needs a quick if (newWakeups) or something.

Flags: needinfo?
Flags: needinfo? → needinfo?(florian)

Set release status flags based on info from the regressing bug 1759535

Has Regression Range: --- → yes
Assignee: nobody → florian
Status: NEW → ASSIGNED
Pushed by fqueze@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/decc6017967e
avoid incrementing thread wakeup glean counters by 0, r=gerald.
Flags: needinfo?(florian)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch

The patch landed in nightly and beta is affected.
:florian, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(florian)

(In reply to Release mgmt bot [:suhaib / :marco/ :calixte] from comment #5)

The patch landed in nightly and beta is affected.
:florian, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

I don't know, hopefully Chutten will know.

Flags: needinfo?(florian) → needinfo?(chutten)

The data's quality is unaffected by 0s not being recorded, so this is a matter of getting accurate error counts inside the error reporting mechanism when it hits release (and making our error monitoring plots easier to read)...

Since this is such a straightforward change, I would like this uplifted to make those plots easier to read.

Flags: needinfo?(chutten) → needinfo?(florian)

Comment on attachment 9272080 [details]
Bug 1764113 - avoid incrementing thread wakeup glean counters by 0, r=gerald.

Beta/Release Uplift Approval Request

  • User impact if declined: No user impact, but Glean errors from the release channel will be harder to count (see comment 7)
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial patch, only adding an if block to avoid recording invalid values.
  • String changes made/needed: None
Flags: needinfo?(florian)
Attachment #9272080 - Flags: approval-mozilla-beta?

Comment on attachment 9272080 [details]
Bug 1764113 - avoid incrementing thread wakeup glean counters by 0, r=gerald.

Approved for 100.0b9

Attachment #9272080 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.