Bug 1764113 - avoid incrementing thread wakeup glean counters by 0, r=gerald.,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D143580